--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,9 @@ android {
 dependencies {
     implementation 'com.squareup.okhttp3:okhttp:4.9.0'
     implementation 'com.google.code.gson:gson:2.8.8'
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.0"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.0"
+
 
 
     implementation 'androidx.core:core-ktx:1.8.0'
