Chuyển màn hình chính về Fragment thay vì dùng Activity , thêm các màn hinh phụ , tạo liên kết giữa các màn hình

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".HourlyActivity"/>
+        <activity android:name=".DailyActivity"/>
+        <activity android:name=".RadaActivity"/>
     </application>
 
 </manifest>
