--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,7 +43,7 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.0"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.0"
     implementation 'com.squareup.picasso:picasso:2.71828'
-
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.3.1"
 
 
     implementation 'androidx.core:core-ktx:1.8.0'
